parser/php_parser.go
// Code generated from PhpParser.g4 by ANTLR 4.13.0. DO NOT EDIT.

package parser // PhpParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PhpParser struct {
	*antlr.BaseParser
}

var PhpParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func phpparserParserInit() {
	staticData := &PhpParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "'?>'", "'function'", "'class'", "'public'", "'private'", "'protected'",
		"'var'", "'return'", "'if'", "'else'", "'while'", "'for'", "'foreach'",
		"'switch'", "'case'", "'default'", "'break'", "'continue'", "'echo'",
		"'print'", "'new'", "'extends'", "'implements'", "'namespace'", "'use'",
		"'try'", "'catch'", "'finally'", "'throw'", "'static'", "'abstract'",
		"'final'", "'as'", "", "", "", "'='", "'+'", "'-'", "'*'", "'/'", "'%'",
		"'**'", "'&&'", "'||'", "'!'", "'=='", "", "'>'", "'<'", "'>='", "'<='",
		"'.'", "':'", "';'", "','", "'('", "')'", "'{'", "'}'",
	}
	staticData.SymbolicNames = []string{
		"", "T_OPEN_TAG", "T_CLOSE_TAG", "T_FUNCTION", "T_CLASS", "T_PUBLIC",
		"T_PRIVATE", "T_PROTECTED", "T_VAR", "T_RETURN", "T_IF", "T_ELSE", "T_WHILE",
		"T_FOR", "T_FOREACH", "T_SWITCH", "T_CASE", "T_DEFAULT", "T_BREAK",
		"T_CONTINUE", "T_ECHO", "T_PRINT", "T_NEW", "T_EXTENDS", "T_IMPLEMENTS",
		"T_NAMESPACE", "T_USE", "T_TRY", "T_CATCH", "T_FINALLY", "T_THROW",
		"T_STATIC", "T_ABSTRACT", "T_FINAL", "T_AS", "T_BOOLEAN", "T_VARIABLE",
		"T_IDENTIFIER", "T_ASSIGN", "T_PLUS", "T_MINUS", "T_MULT", "T_DIV",
		"T_MOD", "T_POW", "T_AND", "T_OR", "T_NOT", "T_EQUAL", "T_NOT_EQUAL",
		"T_GREATER", "T_LESS", "T_GREATER_EQUAL", "T_LESS_EQUAL", "T_CONCAT",
		"T_COLON", "T_SEMICOLON", "T_COMMA", "T_L_PARENTHESIS", "T_R_PARENTHESIS",
		"T_L_BRACE", "T_R_BRACE", "T_INT", "T_FLOAT", "T_STRING", "T_COMMENT",
		"T_COMMENT_BLOCK", "T_WHITESPACE",
	}
	staticData.RuleNames = []string{
		"program", "statement", "expressionStatement", "expression", "assignmentExpression",
		"unaryExpression", "primaryExpression", "functionDeclaration", "parameterList",
		"parameter", "classDeclaration", "ifStatement", "whileStatement", "forStatement",
		"foreachStatement", "switchStatement", "caseStatement", "returnStatement",
		"echoStatement", "expressionList", "block",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PhpParserInit initializes any static state used to implement PhpParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPhpParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PhpParserInit() {
	staticData := &PhpParserParserStaticData
	staticData.once.Do(phpparserParserInit)
}

// NewPhpParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPhpParser(input antlr.TokenStream) *PhpParser {
	PhpParserInit()
	this := new(PhpParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PhpParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PhpParser.g4"

	return this
}

// PhpParser tokens.
const (
	PhpParserEOF             = antlr.TokenEOF
	PhpParserT_OPEN_TAG      = 1
	PhpParserT_CLOSE_TAG     = 2
	PhpParserT_FUNCTION      = 3
	PhpParserT_CLASS         = 4
	PhpParserT_PUBLIC        = 5
	PhpParserT_PRIVATE       = 6
	PhpParserT_PROTECTED     = 7
	PhpParserT_VAR           = 8
	PhpParserT_RETURN        = 9
	PhpParserT_IF            = 10
	PhpParserT_ELSE          = 11
	PhpParserT_WHILE         = 12
	PhpParserT_FOR           = 13
	PhpParserT_FOREACH       = 14
	PhpParserT_SWITCH        = 15
	PhpParserT_CASE          = 16
	PhpParserT_DEFAULT       = 17
	PhpParserT_BREAK         = 18
	PhpParserT_CONTINUE      = 19
	PhpParserT_ECHO          = 20
	PhpParserT_PRINT         = 21
	PhpParserT_NEW           = 22
	PhpParserT_EXTENDS       = 23
	PhpParserT_IMPLEMENTS    = 24
	PhpParserT_NAMESPACE     = 25
	PhpParserT_USE           = 26
	PhpParserT_TRY           = 27
	PhpParserT_CATCH         = 28
	PhpParserT_FINALLY       = 29
	PhpParserT_THROW         = 30
	PhpParserT_STATIC        = 31
	PhpParserT_ABSTRACT      = 32
	PhpParserT_FINAL         = 33
	PhpParserT_AS            = 34
	PhpParserT_BOOLEAN       = 35
	PhpParserT_VARIABLE      = 36
	PhpParserT_IDENTIFIER    = 37
	PhpParserT_ASSIGN        = 38
	PhpParserT_PLUS          = 39
	PhpParserT_MINUS         = 40
	PhpParserT_MULT          = 41
	PhpParserT_DIV           = 42
	PhpParserT_MOD           = 43
	PhpParserT_POW           = 44
	PhpParserT_AND           = 45
	PhpParserT_OR            = 46
	PhpParserT_NOT           = 47
	PhpParserT_EQUAL         = 48
	PhpParserT_NOT_EQUAL     = 49
	PhpParserT_GREATER       = 50
	PhpParserT_LESS          = 51
	PhpParserT_GREATER_EQUAL = 52
	PhpParserT_LESS_EQUAL    = 53
	PhpParserT_CONCAT        = 54
	PhpParserT_COLON         = 55
	PhpParserT_SEMICOLON     = 56
	PhpParserT_COMMA         = 57
	PhpParserT_L_PARENTHESIS = 58
	PhpParserT_R_PARENTHESIS = 59
	PhpParserT_L_BRACE       = 60
	PhpParserT_R_BRACE       = 61
	PhpParserT_INT           = 62
	PhpParserT_FLOAT         = 63
	PhpParserT_STRING        = 64
	PhpParserT_COMMENT       = 65
	PhpParserT_COMMENT_BLOCK = 66
	PhpParserT_WHITESPACE    = 67
)

// PhpParser rules.
const (
	PhpParserRULE_program              = 0
	PhpParserRULE_statement            = 1
	PhpParserRULE_expressionStatement  = 2
	PhpParserRULE_expression           = 3
	PhpParserRULE_assignmentExpression = 4
	PhpParserRULE_unaryExpression      = 5
	PhpParserRULE_primaryExpression    = 6
	PhpParserRULE_functionDeclaration  = 7
	PhpParserRULE_parameterList        = 8
	PhpParserRULE_parameter            = 9
	PhpParserRULE_classDeclaration     = 10
	PhpParserRULE_ifStatement          = 11
	PhpParserRULE_whileStatement       = 12
	PhpParserRULE_forStatement         = 13
	PhpParserRULE_foreachStatement     = 14
	PhpParserRULE_switchStatement      = 15
	PhpParserRULE_caseStatement        = 16
	PhpParserRULE_returnStatement      = 17
	PhpParserRULE_echoStatement        = 18
	PhpParserRULE_expressionList       = 19
	PhpParserRULE_block                = 20
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PhpParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PhpParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PhpParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(PhpParserEOF, 0)
}

func (s *ProgramContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PhpParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PhpParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *PhpParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PhpParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(45)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64((_la-3)) & ^0x3f) == 0 && ((int64(1)<<(_la-3))&4071271805652967107) != 0 {
		{
			p.SetState(42)
			p.Statement()
		}

		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(48)
		p.Match(PhpParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ExpressionStatement() IExpressionStatementContext
	FunctionDeclaration() IFunctionDeclarationContext
	ClassDeclaration() IClassDeclarationContext
	IfStatement() IIfStatementContext
	WhileStatement() IWhileStatementContext
	ForStatement() IForStatementContext
	ForeachStatement() IForeachStatementContext
	SwitchStatement() ISwitchStatementContext
	ReturnStatement() IReturnStatementContext
	EchoStatement() IEchoStatementContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PhpParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PhpParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PhpParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) ExpressionStatement() IExpressionStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionStatementContext)
}

func (s *StatementContext) FunctionDeclaration() IFunctionDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *StatementContext) ClassDeclaration() IClassDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClassDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClassDeclarationContext)
}

func (s *StatementContext) IfStatement() IIfStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIfStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIfStatementContext)
}

func (s *StatementContext) WhileStatement() IWhileStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhileStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhileStatementContext)
}

func (s *StatementContext) ForStatement() IForStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IForStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IForStatementContext)
}

func (s *StatementContext) ForeachStatement() IForeachStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IForeachStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IForeachStatementContext)
}

func (s *StatementContext) SwitchStatement() ISwitchStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISwitchStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISwitchStatementContext)
}

func (s *StatementContext) ReturnStatement() IReturnStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IReturnStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IReturnStatementContext)
}

func (s *StatementContext) EchoStatement() IEchoStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEchoStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEchoStatementContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PhpParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PhpParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *PhpParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PhpParserRULE_statement)
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PhpParserT_BOOLEAN, PhpParserT_VARIABLE, PhpParserT_MINUS, PhpParserT_NOT, PhpParserT_L_PARENTHESIS, PhpParserT_INT, PhpParserT_FLOAT, PhpParserT_STRING:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(50)
			p.ExpressionStatement()
		}

	case PhpParserT_FUNCTION:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(51)
			p.FunctionDeclaration()
		}

	case PhpParserT_CLASS:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(52)
			p.ClassDeclaration()
		}

	case PhpParserT_IF:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(53)
			p.IfStatement()
		}

	case PhpParserT_WHILE:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(54)
			p.WhileStatement()
		}

	case PhpParserT_FOR:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(55)
			p.ForStatement()
		}

	case PhpParserT_FOREACH:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(56)
			p.ForeachStatement()
		}

	case PhpParserT_SWITCH:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(57)
			p.SwitchStatement()
		}

	case PhpParserT_RETURN:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(58)
			p.ReturnStatement()
		}

	case PhpParserT_ECHO:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(59)
			p.EchoStatement()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExpressionStatementContext is an interface to support dynamic dispatch.
type IExpressionStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expression() IExpressionContext
	T_SEMICOLON() antlr.TerminalNode

	// IsExpressionStatementContext differentiates from other interfaces.
	IsExpressionStatementContext()
}

type ExpressionStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionStatementContext() *ExpressionStatementContext {
	var p = new(ExpressionStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PhpParserRULE_expressionStatement
	return p
}

func InitEmptyExpressionStatementContext(p *ExpressionStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PhpParserRULE_expressionStatement
}

func (*ExpressionStatementContext) IsExpressionStatementContext() {}

func NewExpressionStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionStatementContext {
	var p = new(ExpressionStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PhpParserRULE_expressionStatement

	return p
}

func (s *ExpressionStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionStatementContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExpressionStatementContext) T_SEMICOLON() antlr.TerminalNode {
	return s.GetToken(PhpParserT_SEMICOLON, 0)
}

func (s *ExpressionStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PhpParserListener); ok {
		listenerT.EnterExpressionStatement(s)
	}
}

func (s *ExpressionStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PhpParserListener); ok {
		listenerT.ExitExpressionStatement(s)
	}
}

func (p *PhpParser) ExpressionStatement() (localctx IExpressionStatementContext) {
	localctx = NewExpressionStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PhpParserRULE_expressionStatement)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.expression(0)
	}
	{
		p.SetState(63)
		p.Match(PhpParserT_SEMICOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AssignmentExpression() IAssignmentExpressionContext
	UnaryExpression() IUnaryExpressionContext
	PrimaryExpression() IPrimaryExpressionContext
	AllExpression() []IExpressionContext
	Expression(i int) IExpressionContext
	T_PLUS() antlr.TerminalNode
	T_MINUS() antlr.TerminalNode
	T_MULT() antlr.TerminalNode
	T_DIV() antlr.TerminalNode
	T_MOD() antlr.TerminalNode
	T_CONCAT() antlr.TerminalNode
	T_EQUAL() antlr.TerminalNode
	T_NOT_EQUAL() antlr.TerminalNode

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PhpParserRULE_expression
	return p
}

func InitEmptyExpressionContext(p *ExpressionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PhpParserRULE_expression
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PhpParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) AssignmentExpression() IAssignmentExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignmentExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignmentExpressionContext)
}

func (s *ExpressionContext) UnaryExpression() IUnaryExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUnaryExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUnaryExpressionContext)
}

func (s *ExpressionContext) PrimaryExpression() IPrimaryExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrimaryExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrimaryExpressionContext)
}

func (s *ExpressionContext) AllExpression() []IExpressionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExpressionContext); ok {
			len++
		}
	}

	tst := make([]IExpressionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExpressionContext); ok {
			tst[i] = t.(IExpressionContext)
			i++
		}
	}

	return tst
}

func (s *ExpressionContext) Expression(i int) IExpressionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExpressionContext) T_PLUS() antlr.TerminalNode {
	return s.GetToken(PhpParserT_PLUS, 0)
}

func (s *ExpressionContext) T_MINUS() antlr.TerminalNode {
	return s.GetToken(PhpParserT_MINUS, 0)
}

func (s *ExpressionContext) T_MULT() antlr.TerminalNode {
	return s.GetToken(PhpParserT_MULT, 0)
}

func (s *ExpressionContext) T_DIV() antlr.TerminalNode {
	return s.GetToken(PhpParserT_DIV, 0)
}

func (s *ExpressionContext) T_MOD() antlr.TerminalNode {
	return s.GetToken(PhpParserT_MOD, 0)
}

func (s *ExpressionContext) T_CONCAT() antlr.TerminalNode {
	return s.GetToken(PhpParserT_CONCAT, 0)
}

func (s *ExpressionContext) T_EQUAL() antlr.TerminalNode {
	return s.GetToken(PhpParserT_EQUAL, 0)
}

func (s *ExpressionContext) T_NOT_EQUAL() antlr.TerminalNode {
	return s.GetToken(PhpParserT_NOT_EQUAL, 0)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PhpParserListener); ok {
		listenerT.EnterExpression(s)
	}
}

func (s *ExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PhpParserListener); ok {
		listenerT.ExitExpression(s)
	}
}

func (p *PhpParser) Expression() (localctx IExpressionContext) {
	return p.expression(0)
}

func (p *PhpParser) expression(_p int) (localctx IExpressionContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()

	_parentState := p.GetState()
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IExpressionContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 6
	p.EnterRecursionRule(localctx, 6, PhpParserRULE_expression, _p)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		{
			p.SetState(66)
			p.AssignmentExpression()
		}

	case 2:
		{
			p.SetState(67)
			p.UnaryExpression()
		}

	case 3:
		{
			p.SetState(68)
			p.PrimaryExpression()
		}
